k8s/simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  controller: ingress.k8s.aws/alb

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0178c879cd4544b65,subnet-09ca5f8c00d870d12,subnet-0c576dfba34f4e6f5
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /api/workflow
        pathType: Prefix
        backend:
          service:
            name: workflow-service
            port:
              number: 80
